# ndr_attributes

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  index.html  make.bat
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/ndr_attributes/: index.doctree
docs/_build/doctrees/autoapi/ndr_attributes/ndr_attributes/: index.doctree
docs/_build/doctrees/autoapi/ndr_attributes/plotting/: index.doctree
docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/ndr_attributes/: ndr_attributes.html  plotting.html
docs/_build/html/_sources/: example.ipynb.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/ndr_attributes/: index.rst.txt
docs/_build/html/_sources/autoapi/ndr_attributes/ndr_attributes/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/ndr_attributes/: index.html
docs/_build/html/autoapi/ndr_attributes/ndr_attributes/: index.html
docs/_build/html/autoapi/ndr_attributes/plotting/: index.html
docs/_build/jupyter_execute/: example.ipynb
src/ndr_attributes/: __init__.py  datasets.py  ndr_attributes.py
src/ndr_attributes/data/: flatland.txt
tests/: test_ndr_attributes.py
(+1 files in other folders)
